# coral

./: .gitignore  AGENTS.md  Cargo.toml  README.md  phase-glm.md  phase.md  todo-cn.md  todo.md
src/: change.rs  id.rs  lib.rs  types.rs
src/container/: mod.rs
src/container/list/: list_op.rs  mod.rs
src/container/map/: map_op.rs  mod.rs
src/container/tree/: mod.rs  tree_op.rs
src/core/: arena.rs  change.rs  container.rs  dag.rs  mod.rs
src/doc/: mod.rs  state.rs
src/memory/: arena.rs  mod.rs  str_arena.rs
src/op/: content.rs  mod.rs
src/oplog/: app_dag.rs  change_store.rs  inner.rs  mod.rs  pending_changes.rs
src/rle/: mod.rs  rle_impl.rs  rle_vec.rs
src/state/: container_state.rs  counter_state.rs  mod.rs
src/tests/: mod.rs  oplog.rs
src/txn/: diff.rs  event_hint.rs  mod.rs  transaction.rs
src/types/: container.rs  container_id.rs  error.rs  id.rs  mod.rs  primitives.rs  value.rs
src/version/: diff.rs  frontiers.rs  mod.rs  span.rs
