[package]
name = "coral"
version = "0.1.0"
edition = "2024"
authors = ["lichuang"]
license = "MIT"
description = "A composable CRDT library for collaborative applications. "
repository = "https://github.com/lichuang/coral"

[dependencies]
im = "15"
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
num = "0.4"
